# crime_report

./: .env.example  .gitignore  README.md  db.sqlite3  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/complaint/: admin.py  models.py
backend/crime_report/: data_backup.json  forms.py  wsgi.py
backend/crime_report/user/: asgi.py  settings.py  urls.py  wsgi.py
backend/location/: forms.py  models.py  views.py
backend/static/complaint/: complaint.css
backend/static/crime_report/: home.css
backend/static/register/: register.css
backend/templates/crime_report/: home.html
backend/templates/news/: news.html
backend/templates/register/: register.html
backend/templates/status/: status.html
complaint/: models.py  views.py
complaint/migrations/: 0001_initial.py  0002_alter_complaint_phonenumber.py
crime_report/: asgi.py  settings.py  urls.py  views.py
fronted/: package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
location/: views.py
location/migrations/: 0001_initial.py
static/complaint/: complaint.css
static/location/: maps.css  search.css
static/maps/: maps.css
static/news/: news.css
static/register/: login.css  register.css
templates/complaint/: complaint.html
templates/crime_report/: home.html  userhome.html
templates/location/: maps.html  search.html
templates/maps/: maps.html
templates/news/: news.html
templates/register/: login.html  register.html
templates/status/: status.html
