[project]
name = "backend"
version = "0.1.0"
description = "Backend for Crime Report"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap4>=2026.2",
    "django>=6.0.2",
    "django-crispy-forms>=2.6",
    "folium>=0.20.0",
    "geocoder>=1.38.1",
    "newsapi-python>=0.2.7",
]
