[project]
name = "backend"
version = "0.1.0"
description = "Backend for Crime Report"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.59",
    "celery>=5.6.2",
    "crispy-bootstrap4>=2026.2",
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.6",
    "django-debug-toolbar>=6.2.0",
    "django-otp>=1.7.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "folium>=0.20.0",
    "geocoder>=1.38.1",
    "gunicorn>=25.1.0",
    "newsapi-python>=0.2.7",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
    "redis>=7.2.1",
    "whitenoise>=6.12.0",
]
